--- a/src/app/pages/admin/menus/menus.component.html
+++ b/src/app/pages/admin/menus/menus.component.html
@@ -1,8 +1,13 @@
 <a routerLink="/admin/meals"><button class="btn"><span style="color: rgb(31, 90, 57);"> La liste de tous les plats 👉</span></button></a>
 <a routerLink="/admin/users"><button class="btn"><span style="color: rgb(31, 90, 57);"> La liste des Utilisateurs 👉</span></button></a>
 <div *ngIf="menus">   
-    <p class="styleMenu">Nos menus 👩‍🍳</p>
     <section>
+	    <div style="font-size: 20px; text-align: center; background: #8dbd56;margin-top: 20px;">
+            <button><a routerLink="/admin/meals"><strong> Nos Plats 👩‍🍳 </strong></a></button>
+        </div><br>
+        <div style="font-size: 20px; text-align: center; background:#5bc0de;">
+            <button><a routerLink="/admin/newmenu"><strong> Nouveau Menu </strong></a></button>
+        </div>
         <table class="table table-striped">
             <thead>
                 <tr class="barreMenu">
@@ -14,8 +19,11 @@
             </thead>
             <tbody>
             <tr *ngFor="let menu of menus">
-            <td><a [routerLink]="['/admin/menu', menu.id]">{{menu.label}}</a>
+            <td><a [routerLink]="['/admin/menu', menu.id]" style="font-size:1.3em;display: block;">{{menu.label}}</a>
                 <ul>
+                    <li>
+                        <small>{{menu.description}}</small>
+                    </li>
                     <li>
                         <div *ngFor="let meal of menu.meals">
                             <p style="color: red">{{ meal.label }}</p>
@@ -28,7 +36,7 @@
             <td>{{menu.imageId}}
                 <div class="ser-icon">
                     <img
-                      src="../../../../assets/uploads/menu-img-01.jpg"
+                    [src]="menu.imgUrl" alt="photo des menus"
                       class="img-fluid"
                       alt=""
                     />
@@ -36,10 +44,8 @@
                 
             </td>
                     
-            <!-- <td><a class="btn btn-danger" (click)="onDelete(meal.id)">X</a></td>  -->
+            <td><a class="btn btn-danger" (click)="onDelete(menu.id)">X</a></td> 
             </tr>
             </tbody> 
         </table>
-        <!-- <div style="background-color: blue; font-size: 20px; text-align: center;"><button><a routerLink="/admin/newmenu"><strong> New Menu </strong></a></button></div> -->
-
     </section>
