--- a/src/app/pages/admin/newmeal/newmeal.component.html
+++ b/src/app/pages/admin/newmeal/newmeal.component.html
@@ -1,10 +1,52 @@
-<form [formGroup]="newmeal" (ngSubmit)="onSubmit()">
-    <input type="text" formControlName="Meals">
-    <input type="number" formControlName="Prix">
-    <input type="number" formControlName="Id">
-    <input type="number" formControlName="Images">
-    <button type="submit">Envoyer</button> 
-</form>
+<div class="container">
+    <div [hidden]="submitted">
+        <h1 class="text-center">Créer un nouveau plat</h1>
+        <form [formGroup]="newmeal" (ngSubmit)="onSubmit()" #registerForm="ngForm">
+
+           <div class="form-group">
+                <label for="name">Nom du plat : </label>
+                <input type="text" class="form-control" id="name" formControlName="label" required> 
+           </div>
+           <div class="form-group">
+                <label for="price">Prix : </label>
+                <input type="text" class="form-control" id="price" formControlName="priceDF" required> 
+           </div>
+           <div class="form-group">
+                <label for="description">Description : </label>
+                <input type="text" class="form-control" id="description" formControlName="description" required> 
+            </div>
+
+            <div formArrayName="availableForWeeks">
+                <h3>Disponible Pendant la semaine</h3>
+                <div class="form-group" *ngFor="let idControl of getAvailableForWeeks().controls; let i = index">
+                  <input type="number" class="form-control" [formControlName]="i">
+                </div>
+                <button type="button" class="btn btn-success" (click)="onAddAvailableForWeeks()">Ajouter</button>
+            </div><br> 
+
+            <div formArrayName="ingredientsId">
+                <h3>Nos Id ingrédients</h3>
+                <div class="form-group" *ngFor="let idControl of getIngredientsId().controls; let i = index">
+                  <input type="number" class="form-control" [formControlName]="i">
+                </div>
+                <button type="button" class="btn btn-success" (click)="onAddIngredientsId()">Ajouter un id d'ingrédient</button>
+            </div>   
+
+            <div class="text-center my-5">
+                <button type="submit" class="btn btn-primary" [disabled]="!registerForm.form.valid">Envoyez</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
+
+    
+
+
+
+
 
 
     
