--- a/src/app/pages/admin/user-admin/user-admin.component.html
+++ b/src/app/pages/admin/user-admin/user-admin.component.html
@@ -1,13 +1,26 @@
-<div *ngIf="user">
-    <p>  {{user.name}}</p>
-</div> 
+<div class="container" *ngIf="user">
+    <h1 class="text-center">Modifier <span style="color: #8dbd56; padding-left: 10px;">{{user.name}}  {{user.firstname}}</span></h1>
 
-<form>
-    <input name="name" [(ngModel)]="user.name" >
-    <input name="firstname" [(ngModel)]="user.firstname">
-    <input name="wallet" [(ngModel)]="user.wallet">
-    <button (click)="onClick()">Submit</button> 
-</form>
+    <form>
+       <div class="form-group">
+            <label for="name">Nom de l'utilisateur : </label>
+            <input class="form-control" id="name" name="name"  [(ngModel)]="user.name" > 
+       </div>
+       <div class="form-group">
+            <label for="firstname">Prénom : </label>
+            <input  class="form-control" id="firstname" name="firstname" [(ngModel)]="user.firstname"> 
+       </div>
+       <div class="form-group">
+            <label for="email">Email : </label>
+            <input  class="form-control" id="email" name="email" [(ngModel)]="user.email"> 
+        </div>
+
+
+        <div class="text-center my-5">
+            <button type="submit" class="btn btn-primary" (click)="onClick()">Envoyez</button>
+        </div>
+    </form>
+</div>
 
 
     
