--- a/src/app/pages/profile/profile.component.css
+++ b/src/app/pages/profile/profile.component.css
@@ -13,8 +13,6 @@ mat-card-content .container {
   width: 100%;
   height: 38px;
   margin-bottom: 1rem;
-  /* margin-right: -15px;
-    margin-left: -15px; */
 }
 
 @media screen and (max-width: 767px) {
@@ -22,3 +20,18 @@ mat-card-content .container {
     display: none;
   }
 }
+
+/* ////////////////////// */
+/*Code d'Oriane */
+.picture{
+  color: rgb(129, 129, 129);
+  width: 180px;
+  height: 80px;
+  margin-top: -20px;
+}
+.profile-camera{
+  position: absolute;
+  top: 25%;
+  left: 17%;
+}
+/* ////////////////////// */
