--- a/src/app/pages/orders/orders.component.css
+++ b/src/app/pages/orders/orders.component.css
@@ -58,3 +58,7 @@ header .sim-btn {
 .delete-product:hover {
     color: #99999980;
 }
+
+.menu-container .ser-icon {
+  background-color: initial;
+}
